--- a/tonex_racquet/index.html
+++ b/tonex_racquet/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Tonex, badminton, racquets, super cushion, match , saath,">
+    <meta name="keywords" content="Tonex, badminton, racquets,apparels,badminton shoes,badminton bags, super cushion,grips,shuttle,kitbags,nanoflex,dura,astro,tonex pro collection">
     <meta name="description" content="Buy exclusive badminton racquets, apparels, shoes etc. online at best prices  ">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Tonex Racquets</title>
